fix: box background being too dark

--- a/src/Box/Box.module.styl
+++ b/src/Box/Box.module.styl
@@ -1,7 +1,7 @@
 @import "../config"
 
 .box
-	background var(--theme-100)
+	background var(--theme-50)
 	@media (prefers-color-scheme dark)
 		background var(--gray-800)
 	border-radius 16px
